--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
         autoplay=""
         muted=""
       ></video>
-      <div id="overlay">
-        <div class="container firstwind">
-          <div class="header">
-            <a href="./index.html"><img class="logo" src="img/Logo.svg" alt="Logo" /></a>
-            <input type="checkbox" id="burger" />
-            <label for="burger"></label>
-            <nav>
-              <ul class="header__navigation">
-                <li><a href="./index.html">About Us</a></li>
-                <li><a href="">What We Do</a></li>
-                <li><a href="">Work With Us</a></li>
-                <li><a href="">Contacts</a></li>
-              </ul>
-            </nav>
+      <div class="container firstwind">
+        <div class="header">
+          <a class="img-logo" href="./index.html"
+            ><img class="logo" src="img/Logo.svg" alt="Logo"
+          /></a>
+          <input type="checkbox" id="burger" />
+          <label for="burger"></label>
+          <nav>
+            <ul class="header__navigation">
+              <li><a href="./index.html">About Us</a></li>
+              <li><a href="">What We Do</a></li>
+              <li><a href="">Work With Us</a></li>
+              <li><a href="">Contacts</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="middle">
+          <div class="middle__title">
+            <h2>About Us</h2>
           </div>
-          <div class="middle">
-            <div class="middle__title">
-              <h2>About Us</h2>
-            </div>
-            <p>
-              Our mission: We know that people long to be closer to their idols,
-              and we use our product to help them achieve their dream in the
-              virtual world. Vestan is the only company on the market that
-              provides a unique end-to-end solution for 4K 60fps VR broadcasts.
-            </p>
-          </div>
+          <p>
+            Our mission: We know that people long to be closer to their idols,
+            and we use our product to help them achieve their dream in the
+            virtual world. Vestan is the only company on the market that
+            provides a unique end-to-end solution for 4K 60fps VR broadcasts.
+          </p>
         </div>
       </div>
     </header>
