--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       ></video>
       <div class="container firstwind">
         <div class="header">
-          <a class="img-logo" href="./index.html"
+          <a class="c" href="./index.html"
             ><img class="logo" src="img/Logo.svg" alt="Logo"
           /></a>
           <input type="checkbox" id="burger" />
@@ -26,9 +26,9 @@
           <nav>
             <ul class="header__navigation">
               <li><a href="./index.html">About Us</a></li>
-              <li><a href="">What We Do</a></li>
-              <li><a href="">Work With Us</a></li>
-              <li><a href="">Contacts</a></li>
+              <li><a href="#">What We Do</a></li>
+              <li><a href="#">Work With Us</a></li>
+              <li><a href="#">Contacts</a></li>
             </ul>
           </nav>
         </div>
@@ -45,5 +45,12 @@
         </div>
       </div>
     </header>
+    <section class="section1">
+        <div class="container second">
+            <div class="second__left">
+            </div>
+            <div class="second__right"></div>
+        </div>
+    </section>
   </body>
 </html>
