--- a/index.html
+++ b/index.html
@@ -53,9 +53,14 @@
                 <h3>Vestan is a <span>global leader</span> </h3>
                 <p class="second__right__our">Our superpower consists of a fantastic, innovative IT product, one-of-a-kind cameras, the world's best content, and a team of true professionals!</p>
                 <h4>in the development of VR streaming technology</h4>
-                <p class="second__right__largest">The largest number of VR streaming hours in the world! VR breaks down barriers. Take in interesting events of all kinds and share exciting experiences with friends and family. 
-                    We go the distance to provide our users with a new doorway to freedom. Vestan becomes a channel through which you can enter a vibrant life filled with stimulating experiences that are yours to choose.</p>
+                <p class="second__right__largest">The largest number of VR streaming hours in the world! VR breaks down barriers. Take in interesting events of all kinds and share exciting experiences with friends and family. </p>
+                <p>We go the distance to provide our users with a new doorway to freedom. Vestan becomes a channel through which you can enter a vibrant life filled with stimulating experiences that are yours to choose.</p>
             </div>
+        </div>
+    </section>
+    <section class="section2">
+        <div class="container">
+
         </div>
     </section>
   </body>
