--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
       </div>
     </header>
     <section class="section1">
-        <div class="container second">
+        <div class="container container2 second">
             <div class="second__left">
+                <img src="img/Frame1.jpg" alt="img">
             </div>
             <div class="second__right">
                 <h3>Vestan is a <span>global leader</span> </h3>
