--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       ></video>
       <div class="container firstwind">
         <div class="header">
-          <a class="c" href="./index.html"
+          <a class="img-logo" href="./index.html"
             ><img class="logo" src="img/Logo.svg" alt="Logo"
           /></a>
           <input type="checkbox" id="burger" />
@@ -60,9 +60,54 @@
         </div>
     </section>
     <section class="section2">
-        <div class="container">
-
+        <div class="container company">
+            <h3>The Company in Numbers</h3>
+            <div class="company__line"></div>
+            <div class="company__info">
+                <div class="company__info__extra">
+                    <p>2018</p>
+                    <span>Company founded in 2018</span>
+                </div>
+                <div class="company__info__line"></div>
+                <div class="company__info__extra">
+                    <p>500 k+</p>
+                    <span>Hours of VR streaming</span>
+                </div>
+                <div class="company__info__line"></div>
+                <div class="company__info__extra">
+                    <p>500 m+</p>
+                    <span>Users know about our product</span>
+                </div>
+                <div class="company__info__extra">
+                    <p>5,000+</p>
+                    <span>Content creators</span>
+                </div>
+                <div class="company__info__line"></div>
+                <div class="company__info__extra">
+                    <p>1,000+</p>
+                    <span>PWN-brand VR cameras</span>
+                </div>
+                <div class="company__info__line"></div>
+                <div class="company__info__extra">
+                    <p>15+</p>
+                    <span>Countries of presence</span>
+                </div>
+            </div>
         </div>
     </section>
+    <footer>
+        <div class="container footer">
+            <ul class="footer__info">
+                <li><a href="./index.html"><img class="logo-foot"src="img/Logo.svg" alt="Logo"></a></li>
+                <li class="copirights">@ 2021 Vestan</li>
+            </ul>
+            <ul class="footer__navigation">
+                <li><a href="./index.html">About Us</a></li>
+                <li><a href="#">What We Do</a></li>
+                <li><a href="#">Work With Us</a></li>
+                <li><a href="#">Contacts</a></li>
+              </ul>
+        </div>
+    </footer>
   </body>
 </html>
