--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <nav>
             <ul class="header__navigation">
               <li><a href="./index.html">About Us</a></li>
-              <li><a href="#">What We Do</a></li>
-              <li><a href="#">Work With Us</a></li>
-              <li><a href="#">Contacts</a></li>
+              <li><a href="./what.html">What We Do</a></li>
+              <li><a href=".work.html">Work With Us</a></li>
+              <li><a href=".contacts.html">Contacts</a></li>
             </ul>
           </nav>
         </div>
@@ -55,7 +55,7 @@
                 <p class="second__right__our">Our superpower consists of a fantastic, innovative IT product, one-of-a-kind cameras, the world's best content, and a team of true professionals!</p>
                 <h4>in the development of VR streaming technology</h4>
                 <p class="second__right__largest">The largest number of VR streaming hours in the world! VR breaks down barriers. Take in interesting events of all kinds and share exciting experiences with friends and family. </p>
-                <p>We go the distance to provide our users with a new doorway to freedom. Vestan becomes a channel through which you can enter a vibrant life filled with stimulating experiences that are yours to choose.</p>
+                <p class="second__right__we">We go the distance to provide our users with a new doorway to freedom. Vestan becomes a channel through which you can enter a vibrant life filled with stimulating experiences that are yours to choose.</p>
             </div>
         </div>
     </section>
@@ -103,9 +103,9 @@
             </ul>
             <ul class="footer__navigation">
                 <li><a href="./index.html">About Us</a></li>
-                <li><a href="#">What We Do</a></li>
-                <li><a href="#">Work With Us</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="./what.html">What We Do</a></li>
+                <li><a href="./work.html">Work With Us</a></li>
+                <li><a href="./contacts.html">Contacts</a></li>
               </ul>
         </div>
     </footer>
