--- a/what.html
+++ b/what.html
@@ -35,15 +35,15 @@
           <div class="middle__title">
             <h2>What We Do</h2>
           </div>
-          <p class="middle__mission">
-            We research and implement cutting-edge VR and AR solutions. In our
-            laboratories, we create prototypes of devices that allow us to
-            remain at
+          <p class="middle__mission middle__mission1">
+            We research and implement cutting-edge VR and AR solutions. 
           </p>
+          <p class="middle__mission">In our laboratories, we create prototypes of devices that allow us to
+            remain at</p>
         </div>
       </div>
     </header>
-    <section class="wrap">
+    <section class="wrap wrapmin">
       <div class="container container2 second  second-what">
         <div class="second__right whatright">
           <h3 class="whatright__vest">IT</h3>
@@ -65,7 +65,7 @@
           </p>
         </div>
         <div class="second__left live">
-          <img  class="second__left__image" src="img/Frame2.jpg" alt="img" />
+          <img  class="second__left__image" src="img/Frame2.jpg" alt="img" class="live__image"/>
           <img src="img/Livestream.svg" alt="Livestream" class="live__livestream">
         </div>
       </div>
@@ -92,11 +92,11 @@
             <img  class="second__left__image" src="img/Frame3.jpg" alt="img" />
           </div>
           <div class="second__right">
-            <h3>Cameras</h3>
+            <h3  class="whatright__vest">Cameras</h3>
             <p class="second__right__largest whatright__text">
                 One important area of work for the company is the development of our own cameras.
             </p>
-            <p class="second__right__largest whatright__text">
+            <p class="second__right__largest whatright__text whatright__text1">
                 We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.
             </p>
           </div>
@@ -106,11 +106,11 @@
       <div class="container market">
         <h3 class="market__vest">Vestan is a company that shapes quality standards for the VR market!</h3>
         <div class="market__prod">
-          <p class="market__prod__products product1">Resolution 3840 × 2160</p>
+          <p class="market__prod__products product1 product6">Resolution 3840 × 2160</p>
           <p class="market__prod__products product1">Side-by-Side or Over-Under stereo format</p>
-          <p class="market__prod__products product2">Camera distance 60mm</p>
-          <p class="market__prod__products product3">IMU Gyro + Acc</p>
-          <p class="market__prod__products product3">ISP 3DNR, HDR, fisheye correction</p>
+          <p class="market__prod__products product2 product6">Camera distance 60mm</p>
+          <p class="market__prod__products product3 product5">IMU Gyro + Acc</p>
+          <p class="market__prod__products product3 product6">ISP 3DNR, HDR, fisheye correction</p>
           <p class="market__prod__products">FOV (D/H/V) ~ 180°/119°/134°</p>
         </div>
       </div>
