--- a/what.html
+++ b/what.html
@@ -26,8 +26,8 @@
             <ul class="header__navigation">
               <li><a href="./index.html">About Us</a></li>
               <li><a class="activehtml" href="./what.html">What We Do</a></li>
-              <li><a href=".work.html">Work With Us</a></li>
-              <li><a href=".contacts.html">Contacts</a></li>
+              <li><a href="./work.html">Work With Us</a></li>
+              <li><a href="./contacts.html">Contacts</a></li>
             </ul>
           </nav>
         </div>
