--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="contact">
-        <div class="container firstwind">
+        <div class="container">
           <div class="header headercontact">
             <a class="img-logo" href="./index.html"
               ><img class="logo" src="img/Logo.svg" alt="Logo"
@@ -25,6 +25,9 @@
               </ul>
             </nav>
           </div>
+          <div class="map">
+            <img src="img/map.png" alt="map">
+          </div> 
           <div class="middle middlecont">
             <div class="middle__title middlecont__title">
               <h2>Contacts</h2>
