--- a/index.html
+++ b/index.html
@@ -62,23 +62,23 @@
         <div class="container company">
             <h3 class="company__numbers">The Company in Numbers</h3>
             <div class="company__info">
-                <div class="company__info__extra item1 item4">
+                <div class="company__info__extra">
                     <p>2018</p>
                     <span>Company founded in 2018</span>
                 </div>
-                <div class="company__info__extra item1 item5">
+                <div class="company__info__extra">
                     <p>500 k+</p>
                     <span>Hours of VR streaming</span>
                 </div>
-                <div class="company__info__extra item2 item4">
+                <div class="company__info__extra">
                     <p>500 m+</p>
                     <span>Users know about our product</span>
                 </div>
-                <div class="company__info__extra item3 item5">
+                <div class="company__info__extra">
                     <p>5,000+</p>
                     <span>Content creators</span>
                 </div>
-                <div class="company__info__extra item3 item6">
+                <div class="company__info__extra">
                     <p>1,000+</p>
                     <span>PWN-brand VR cameras</span>
                 </div>
