--- a/what.html
+++ b/what.html
@@ -105,11 +105,11 @@
       <div class="container market">
         <h3 class="market__vest">Vestan is a company that shapes quality standards for the VR market!</h3>
         <div class="market__prod">
-          <p class="market__prod__products product1 product6">Resolution 3840 × 2160</p>
-          <p class="market__prod__products product1">Side-by-Side or Over-Under stereo format</p>
-          <p class="market__prod__products product2 product6">Camera distance 60mm</p>
-          <p class="market__prod__products product3 product5">IMU Gyro + Acc</p>
-          <p class="market__prod__products product3 product6">ISP 3DNR, HDR, fisheye correction</p>
+          <p class="market__prod__products">Resolution 3840 × 2160</p>
+          <p class="market__prod__products">Side-by-Side or Over-Under stereo format</p>
+          <p class="market__prod__products">Camera distance 60mm</p>
+          <p class="market__prod__products">IMU Gyro + Acc</p>
+          <p class="market__prod__products">ISP 3DNR, HDR, fisheye correction</p>
           <p class="market__prod__products">FOV (D/H/V) ~ 180°/119°/134°</p>
         </div>
       </div>
