--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
           </nav>
         </div>
         <div class="middle">
-          <div class="middle__title">
-            <h2>About Us</h2>
-          </div>
+            <h2 class="middle__title"><span>About Us</span></h2>
           <p class="middle__mission">
             Our mission: We know that people long to be closer to their idols,
             and we use our product to help them achieve their dream in the
@@ -45,7 +43,7 @@
       </div>
     </header>
     <section class="wrapper">
-        <div class="container container2 second">
+        <div class="container big-container second">
             <div class="second__left">
                 <img class="second__left__image second__left__image1" src="img/Frame1.jpg" alt="img">
             </div>
