--- a/what.html
+++ b/what.html
@@ -32,9 +32,7 @@
           </nav>
         </div>
         <div class="middle">
-          <div class="middle__title">
-            <h2>What We Do</h2>
-          </div>
+            <h2 class="middle__title"><span>What We Do</span></h2>
           <p class="middle__mission middle__mission1">
             We research and implement cutting-edge VR and AR solutions. 
           </p>
@@ -44,7 +42,7 @@
       </div>
     </header>
     <section class="wrap wrapmin">
-      <div class="container container2 second  second-what">
+      <div class="container big-container second  second-what">
         <div class="second__right whatright">
           <h3 class="whatright__vest">IT</h3>
           <p class="second__right__largest whatright__text">
@@ -87,7 +85,7 @@
       </div>
     </section>
     <section class="wrap">
-        <div class="container container2 second">
+        <div class="container big-container second">
           <div class="second__left camera">
           </div>
           <div class="second__right">
