--- a/work.html
+++ b/work.html
@@ -8,6 +8,26 @@
     <title>Vestan</title>
 </head>
 <body>
+  <div id="wrapper-modal">
+    <div id="overlay"></div>
+    <div id="modal-window">
+        <div class="modal-btn">
+            <button id="btn-close"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M4.92894 17.799C4.53842 18.1895 4.53842 18.8227 4.92894 19.2132C5.31947 19.6037 5.95263 19.6037 6.34315 19.2132L12 13.5563L17.6569 19.2131C18.0474 19.6037 18.6806 19.6037 19.0711 19.2131C19.4616 18.8226 19.4616 18.1894 19.0711 17.7989L13.4143 12.1421L19.0711 6.48526C19.4616 6.09474 19.4616 5.46157 19.0711 5.07105C18.6806 4.68052 18.0474 4.68052 17.6569 5.07105L12 10.7279L6.34318 5.071C5.95266 4.68048 5.31949 4.68048 4.92897 5.071C4.53844 5.46153 4.53844 6.09469 4.92897 6.48522L10.5858 12.1421L4.92894 17.799Z" fill="#2F214C"/>
+              </svg>
+              </button>
+        </div>
+        <div class="content">
+          <h3 class="job__variant__var-head content__head">Variant 1</h3>
+          <p class="job__variant__var-text content__text">One important area of work for the company is the development of our own cameras.</p>
+          <p class="job__variant__var-text content__text"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
+          <p class="job__variant__var-text content__text">One important area of work for the company is the development of our own cameras.</p>
+          <p class="job__variant__var-text2 content__text2">  We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
+          <a href="./contacts.html" class="job__variant__var-btn">contact us</a>
+        </div>
+        </div>
+    </div>
+</div>
     <header class="works">
         <div class="container firstwind">
           <div class="header">
@@ -26,9 +46,7 @@
             </nav>
           </div>
           <div class="middle work">
-            <div class="middle__title work__title">
-              <h2>Work With Us</h2>
-            </div>
+              <h2 class="middle__title work__title"><span>Work With Us</span></h2>
             <p class="work__we">
                 We are constantly looking for motivated, energetic professionals to become part of our close-knit team. 
             </p>
@@ -45,7 +63,7 @@
         </div>
       </header>
       <section>
-          <div class="container container2 second secondwork">
+          <div class="container big-container second secondwork">
             <div class="second__right greatest greatesting">
                 <h3 class="greatest__title">The Vestan team is our company's greatest asset!</h3>
                 <p class="greatest__info">Vestan is a team of energetic individuals, all of whom are experts in various fields.</p>
@@ -72,46 +90,44 @@
           </div>
       </section>
       <section>
-          <div class="container container2 job">
-              <div class="job__opport">
-                    <h2>Job Opportunities</h2>
-              </div>
+          <div class="container big-container job">
+                    <h2  class="job__opport"><span>Job Opportunities</span></h2>
               <div class="job__variant">
                   <div class="job__variant__var">
                     <h3 class="job__variant__var-head">Variant 1</h3>
                     <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
                     <p class="job__variant__var-text2"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
-                    <button class="job__variant__var-btn">read more</button>
+                    <a href="#modal-window" class="job__variant__var-btn" id="btn-open">read more</a>
                   </div>
                   <div class="job__variant__var">
                     <h3 class="job__variant__var-head">Variant 1</h3>
                     <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
                     <p class="job__variant__var-text2"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
-                    <button class="job__variant__var-btn">read more</button>
+                    <a href="#modal-window" class="job__variant__var-btn" id="btn-open2">read more</a>
                   </div>
                   <div class="job__variant__var">
                     <h3 class="job__variant__var-head">Variant 1</h3>
                     <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
                     <p class="job__variant__var-text2"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
-                    <button class="job__variant__var-btn">read more</button>
+                    <a href="#modal-window"class="job__variant__var-btn" id="btn-open3">read more</a>
                   </div>
                   <div class="job__variant__var">
                     <h3 class="job__variant__var-head">Variant 1</h3>
                     <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
                     <p class="job__variant__var-text2"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
-                    <button class="job__variant__var-btn">read more</button>
+                    <a href="#modal-window" class="job__variant__var-btn" id="btn-open4">read more</a>
                   </div>
                   <div class="job__variant__var">
                     <h3 class="job__variant__var-head">Variant 1</h3>
                     <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
                     <p class="job__variant__var-text2"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
-                    <button class="job__variant__var-btn">read more</button>
+                    <a href="#modal-window" class="job__variant__var-btn" id="btn-open5">read more</a>
                   </div>
                   <div class="job__variant__var">
                     <h3 class="job__variant__var-head">Variant 1</h3>
                     <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
                     <p class="job__variant__var-text2"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
-                    <button class="job__variant__var-btn">read more</button>
+                    <a href="#modal-window" class="job__variant__var-btn" id="btn-open6">read more</a>
                   </div>
 
                 </div>
@@ -135,5 +151,6 @@
           </ul>
         </div>
       </footer>
+      <script src="js/main.js"></script>
 </body>
 </html>
