--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,7 @@
     <title>Vestan</title>
 </head>
 <body>
+  <div class="bigwrapper">
     <header class="contact">
         <div class="container">
           <div class="header headercontact">
@@ -26,12 +27,10 @@
             </nav>
           </div>
           <div class="map">
-            <img src="img/map.png" alt="map">
+            <img src="img/map.svg" alt="map">
           </div> 
           <div class="middle middlecont">
-            <div class="middle__title middlecont__title">
-              <h2>Contacts</h2>
-            </div>
+              <h2 class="middle__title middlecont__title"><span>Contacts</span></h2>
             <h3 class="middlecont__vest">Vestan HQ</h3>
             <p class="middlecont__address">
                 Bouboulinas 1-3, BOUBOULINA BUILDING, Flat 42, 1060, Nicosia, Cyprus    
@@ -58,5 +57,6 @@
           </ul>
         </div>
       </footer>
+    </div>
 </body>
 </html>
