--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="wrapper">
         <div class="container big-container second">
             <div class="second__left">
-                <img class="second__left__image second__left__image1" src="img/Frame1.jpg" alt="img">
+                <img class="second__left__image second__left__imagelast" src="img/Frame1.jpg" alt="img">
             </div>
             <div class="second__right">
                 <h3 class="second__right__vest">Vestan is a <span>global leader</span> </h3>
