--- a/what.html
+++ b/what.html
@@ -93,7 +93,7 @@
             <p class="second__right__largest whatright__text">
                 One important area of work for the company is the development of our own cameras.
             </p>
-            <p class="second__right__largest whatright__text whatright__text1">
+            <p class="second__right__largest whatright__text whatright__textlast">
                 We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.
             </p>
           </div>
