--- a/work.html
+++ b/work.html
@@ -22,13 +22,12 @@
           <p class="job__variant__var-text content__text">One important area of work for the company is the development of our own cameras.</p>
           <p class="job__variant__var-text content__text"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
           <p class="job__variant__var-text content__text">One important area of work for the company is the development of our own cameras.</p>
-          <p class="job__variant__var-text2 content__text2">  We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
+          <p class="job__variant__var-textlast content__textlast">  We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
           <a href="./contacts.html" class="job__variant__var-btn">contact us</a>
         </div>
         </div>
     </div>
     <header class="works">
-
         <div class="container firstwind">
           <div class="header">
             <a class="img-logo" href="./index.html"
@@ -64,7 +63,7 @@
       </header>
       <section>
           <div class="container big-container second secondwork">
-            <div class="second__right greatest greatesting">
+            <div class="greatest greatesting">
                 <h3 class="greatest__title">The Vestan team is our company's greatest asset!</h3>
                 <p class="greatest__info">Vestan is a team of energetic individuals, all of whom are experts in various fields.</p>
                 <p class="greatest__info">We are professional developers, engineers, managers, marketers, designers, and customer service specialists who believe that virtual reality is the future. </p>
@@ -72,7 +71,7 @@
                 <p class="greatest__info">We are motorcyclists, gamers, musicians, artists, design and fashion specialists, and many more.</p>
                 <p>Our corporate culture provides each team member with the opportunity to develop creative ideas within our product.</p>
             </div>
-            <div class="second__right greatest wrap">
+            <div class="greatest wrap">
                 <h3 class="greatest__title">The Benefits of Working with Vestan</h3>
                 <ul class="greatest__list">
                     <li>  - A comfortable office in Cyprus</li>
@@ -91,44 +90,44 @@
       </section>
       <section>
           <div class="container big-container job">
-                    <h2  class="job__opport"><span>Job Opportunities</span></h2>
-              <div class="job__variant">
-                  <div class="job__variant__var">
-                    <h3 class="job__variant__var-head">Variant 1</h3>
-                    <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
-                    <p class="job__variant__var-text2"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
-                    <a href="#modal-window" class="job__variant__var-btn" id="btn-open">read more</a>
-                  </div>
-                  <div class="job__variant__var">
-                    <h3 class="job__variant__var-head">Variant 1</h3>
-                    <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
-                    <p class="job__variant__var-text2"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
-                    <a href="#modal-window" class="job__variant__var-btn" id="btn-open2">read more</a>
-                  </div>
-                  <div class="job__variant__var">
-                    <h3 class="job__variant__var-head">Variant 1</h3>
-                    <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
-                    <p class="job__variant__var-text2"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
-                    <a href="#modal-window"class="job__variant__var-btn" id="btn-open3">read more</a>
-                  </div>
-                  <div class="job__variant__var">
-                    <h3 class="job__variant__var-head">Variant 1</h3>
-                    <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
-                    <p class="job__variant__var-text2"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
-                    <a href="#modal-window" class="job__variant__var-btn" id="btn-open4">read more</a>
-                  </div>
-                  <div class="job__variant__var">
-                    <h3 class="job__variant__var-head">Variant 1</h3>
-                    <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
-                    <p class="job__variant__var-text2"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
-                    <a href="#modal-window" class="job__variant__var-btn" id="btn-open5">read more</a>
-                  </div>
-                  <div class="job__variant__var">
-                    <h3 class="job__variant__var-head">Variant 1</h3>
-                    <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
-                    <p class="job__variant__var-text2"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
-                    <a href="#modal-window" class="job__variant__var-btn" id="btn-open6">read more</a>
-                  </div>
+                  <h2  class="job__opport"><span>Job Opportunities</span></h2>
+                  <div class="job__variant">
+                    <div class="job__variant__var">
+                      <h3 class="job__variant__var-head">Variant 1</h3>
+                      <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
+                      <p class="job__variant__var-textlast"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
+                      <a href="#modal-window" class="job__variant__var-btn" id="btn-open">read more</a>
+                    </div>
+                    <div class="job__variant__var">
+                      <h3 class="job__variant__var-head">Variant 1</h3>
+                      <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
+                      <p class="job__variant__var-textlast"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
+                      <a href="#modal-window" class="job__variant__var-btn" id="btn-open2">read more</a>
+                    </div>
+                    <div class="job__variant__var">
+                      <h3 class="job__variant__var-head">Variant 1</h3>
+                      <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
+                      <p class="job__variant__var-textlast"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
+                      <a href="#modal-window"class="job__variant__var-btn" id="btn-open3">read more</a>
+                    </div>
+                    <div class="job__variant__var">
+                      <h3 class="job__variant__var-head">Variant 1</h3>
+                      <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
+                      <p class="job__variant__var-textlast"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
+                      <a href="#modal-window" class="job__variant__var-btn" id="btn-open4">read more</a>
+                    </div>
+                    <div class="job__variant__var">
+                      <h3 class="job__variant__var-head">Variant 1</h3>
+                      <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
+                      <p class="job__variant__var-textlast"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
+                      <a href="#modal-window" class="job__variant__var-btn" id="btn-open5">read more</a>
+                    </div>
+                    <div class="job__variant__var">
+                      <h3 class="job__variant__var-head">Variant 1</h3>
+                      <p class="job__variant__var-text">One important area of work for the company is the development of our own cameras.</p>
+                      <p class="job__variant__var-textlast"> We are always looking for the best technology solutions on the global market to design and manufacture cameras that meet the highest video broadcasting standards.</p>
+                      <a href="#modal-window" class="job__variant__var-btn" id="btn-open6">read more</a>
+                    </div>
 
                 </div>
           </div>
